# house-prices-ml

./: .gitignore  01_eda_and_pipeline.ipynb  README.md  app.py  pipeline_utils.py  pyproject.toml  requirements.txt
models/: model_blend.pkl  model_ridge.pkl
notebooks/: 01_eda_and_pipeline.ipynb  02_feature_engineering_and_modelling.ipynb
pages/: 01_Map.py  02_Compare.py  03_Sensivity.py
src/: __init__.py  evaluate.py  features.py  pipeline.py  registry.py
tests/: test_evaluate.py  test_features.py  test_pipeline.py  test_registry.py
