[project]
name = "house-prices-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
