[project]
name = "house-prices-ml"
version = "0.1.0"
description = "End-to-end ML pipeline predicting residential property sale prices. Kaggle score: $12,337 RMSE."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
